[package]
name = "tss_recovery"
version = "0.1.1"
authors = ["gcc2ge <1414786333@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.curv]
git = "https://github.com/ZenGo-X/curv.git"
tag = "v0.2.3"
features = ["ec_secp256k1"]