[package]
name = "tss_recovery"
version = "0.1.1"
authors = ["gcc2ge <1414786333@qq.com>"]
edition = "2018"

[features]
default = ["curv/rust-gmp-kzen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
curv = { package = "curv-kzen", version = "0.7", default-features = false }

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }